WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277364
[text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-dynamic-001.html
https://bugs.webkit.org/show_bug.cgi?id=277364
Summary
[text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-t...
alan
Reported
2024-07-30 11:49:37 PDT
ssia
Attachments
[fast-cq]Patch
(2.17 KB, patch)
2024-07-30 11:51 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-07-30 11:51:23 PDT
Created
attachment 472019
[details]
[fast-cq]Patch
EWS
Comment 2
2024-07-30 14:19:32 PDT
Committed
281603@main
(ad53afb87bc9): <
https://commits.webkit.org/281603@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472019
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-07-30 14:20:21 PDT
<
rdar://problem/132844178
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug