[text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-dynamic-001.html https://bugs.webkit.org/show_bug.cgi?id=277364

Reviewed by Simon Fraser.

Property value change requires layout update.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::rareDataChangeRequiresLayout):

Canonical link: https://commits.webkit.org/281603@main